# LanMeet

./: .gitignore  README.md  pyproject.toml
adminui/: index.html
adminui/assets/: main.js  styles.css
assets/: main.js  styles.css
client/: __init__.py  __main__.py  app.py  audio_client.py  control_client.py  file_client.py  screen_client.py  video_client.py
docs/: architecture.md  main.tex  mention_system.md
lan_collaboration_suite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: build_executables.py  cluster_launcher.py
server/: __init__.py  __main__.py  admin_dashboard.py  audio_server.py  control_server.py  file_server.py  latency_server.py  screen_server.py  session_manager.py  video_server.py
shared/: __init__.py  protocol.py  resource_paths.py
tests/: test_client_time_limit.py  test_control_server.py  test_protocol.py  test_session_manager.py
webui/: index.html
